fix header with name and picture

--- a/src/components/landing/Structure.astro
+++ b/src/components/landing/Structure.astro
@@ -11,7 +11,7 @@ import * as CONTENT from "../../pages/date";
         class="lg:row-span-2 ring-1 dark:ring-white/10 ring-primary/5 bg-white dark:bg-secondary shadow-xl dark:shadow-thick rounded-3xl p-8"
       >
         <div
-          class="relative flex items-center gap-x-4 grayscale-[50] hover:grayscale-0 transition duration-1000"
+          class="relative flex-col sm:flex items-center gap-x-4 grayscale-[50] hover:grayscale-0 transition duration-1000"
         >
           <img
             src="/images/profile.webp"
